--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -2,13 +2,154 @@
   
   
 
-    <!--  SURVEY CREATION & DESIGN 🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿-->
-    <div [ngClass]="bmxClientPageDesignMode?'page-design':'page-design-client'" >
-        <app-survey-creation-design [isMobile]="isMobile" [bmxPagesClient]="bmxPagesClient"  [isMenuActive11]="isMenuActive11" [bmxClientPageDesignMode]="bmxClientPageDesignMode" [bmxClientPageOverview]="bmxClientPageOverview">
-        </app-survey-creation-design>
+    <div style="display: flex;">
+        <div style="flex-direction: column;" class="bmx-page" *ngIf="true" >
+    
+    
+            <!-- BRAND MATRIX MODULAR TEMPLATE COMPONENTS  🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀 -->
+            <div *ngFor="let bmxItem of bmxPagesClient[currentPage].page; let i = index"
+                style="display: flex;flex-direction: column;margin: 10px;align-content: center;">
+    
+    
+                <!-- BMX HEADER 😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋 -->
+    
+                <div *ngIf="bmxItem.componentType === 'logo-header'" class="paragraph">
+                    <div style="position: absolute;right: 0px;">
+                        <button *ngIf="bmxClientPageOverview" matTooltip="double click to delete" matTooltipPosition="above"
+                            style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (dblclick)="deleteComponent(i)"
+                            aria-label="delte">
+                            <mat-icon style="font-size: 17px;">cancel</mat-icon>
+                        </button>
+                    </div>
+                    <app-logo-header [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode"
+                        [bmxClientPageOverview]="bmxClientPageOverview"></app-logo-header>
+                </div>
+                <!--😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋 END BMX HEADER  -->
+    
+    
+                <!-- BMX PARAGRAPH EDITOR 📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑 -->
+                <div *ngIf="bmxItem.componentType === 'text-editor'" class="paragraph">
+                    <div class="emoji-handle">.</div>
+                    <div style="position: absolute;right: 0px;">
+                        <button *ngIf="bmxClientPageOverview" matTooltip="double click to delete" matTooltipPosition="above"
+                            style="outline: none;color:#f10a0a;top: 60px;" mat-icon-button (dblclick)="deleteComponent(i)"
+                            aria-label="delte">
+                            <mat-icon style="font-size: 17px;">cancel</mat-icon>
+                        </button>
+                    </div>
+                    <app-text-paragraph [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode"
+                        [bmxClientPageOverview]="bmxClientPageOverview"></app-text-paragraph>
+                </div>
+                <!-- 📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑 END BMX PARAGRAPH EDITOR -->
+    
+    
+                <!-- STARS SCALE 👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽-->
+                <div *ngIf="bmxItem.componentType === 'rate-scale'" class="paragraph " style="margin-bottom: 30px;">
+                    <div class="emoji-handle">.</div>
+                    <div style="position: absolute;right: 0px;">
+                        <button *ngIf="bmxClientPageOverview" matTooltip="double click to delete" matTooltipPosition="above"
+                            style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (dblclick)="deleteComponent(i)"
+                            aria-label="delte">
+                            <mat-icon style="font-size: 17px;">cancel</mat-icon>
+                        </button>
+                    </div>
+                    <app-rating-scale [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode"
+                        [bmxClientPageOverview]="bmxClientPageOverview"></app-rating-scale>
+    
+                </div>
+                <!-- END STARS SCALE 👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽 -->
+    
+    
+                <!-- RANK SCALE 😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭-->
+                <div *ngIf="bmxItem.componentType === 'ranking-scale'" class="paragraph">
+                    <div class="emoji-handle">.</div>
+                    <div style="position: absolute;right: 0px;">
+                        <button *ngIf="bmxClientPageOverview" matTooltip="double click to delete" matTooltipPosition="above"
+                            style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (dblclick)="deleteComponent(i)"
+                            aria-label="delte">
+                            <mat-icon style="font-size: 17px;">cancel</mat-icon>
+                        </button>
+                    </div>
+                    <app-rank-scale [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode"
+                        [bmxClientPageOverview]="bmxClientPageOverview"></app-rank-scale>
+                </div>
+                <!-- END RANK SCALE 😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭 -->
+    
+                <!-- NARROW DOWN SCALE 😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭-->
+                <div *ngIf="bmxItem.componentType === 'narrow-down'" class="paragraph">
+                    <div class="emoji-handle">.</div>
+                    <div style="position: absolute;right: 0px;">
+                        <button *ngIf="bmxClientPageOverview" matTooltip="double click to delete" matTooltipPosition="above"
+                            style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (dblclick)="deleteComponent(i)"
+                            aria-label="delte">
+                            <mat-icon style="font-size: 17px;">cancel</mat-icon>
+                        </button>
+                    </div>
+                    <app-narrow-down [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode"
+                        [bmxClientPageOverview]="bmxClientPageOverview"></app-narrow-down>
+                </div>
+                <!-- END NARROW DOWN SCALE 😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭 -->
+    
+                <!-- IMAGE SCALE 👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀-->
+                <div *ngIf="bmxItem.componentType === 'image-rate-scale'" class="paragraph">
+                    <div class="emoji-handle">.</div>
+                    <div style="position: absolute;right: 0px;">
+                        <button *ngIf="bmxClientPageOverview" matTooltip="double click to delete" matTooltipPosition="above"
+                            style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (dblclick)="deleteComponent(i)"
+                            aria-label="delte">
+                            <mat-icon style="font-size: 17px;">cancel</mat-icon>
+                        </button>
+                    </div>
+                    <app-image-rate-scale [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode"
+                        [bmxClientPageOverview]="bmxClientPageOverview"></app-image-rate-scale>
+                </div>
+                <!-- END IMAGE SCALE 👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀 -->
+    
+    
+                <!-- QUESTION AND ANSWER  ✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️-->
+                <div *ngIf="bmxItem.componentType === 'question-answer'" class="paragraph">
+                    <div class="emoji-handle">.</div>
+                    <div style="position: absolute;right: 0px;">
+                        <button *ngIf="bmxClientPageOverview" matTooltip="double click to delete" matTooltipPosition="above"
+                            style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (dblclick)="deleteComponent(i)"
+                            aria-label="delte">
+                            <mat-icon style="font-size: 17px;">cancel</mat-icon>
+                        </button>
+                    </div>
+                    <app-question-answer [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode"
+                        [bmxClientPageOverview]="bmxClientPageOverview"></app-question-answer>
+                </div>
+                <!-- END QUESTION AND ANSWER  ✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️ -->
+    
+            </div>
+    
+    
+            <!-- PAGE BUTTONS AND DIRECTIONS 1 2 3 📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲-->
+            <div class="page-buttons">
+                <div [ngClass]="bmxClientPageDesignMode?'page-buttons-heigth-40':'page-buttons-heigth-minus-50'">
+                    <button (click)="changePage('previous')" mat-icon-button>
+                        <mat-icon class="full-icon">chevron_left</mat-icon>
+                    </button>
+                    <div *ngFor="let page of bmxPagesClient; let pageIndex = index">
+                        <button style="min-width: 35px;" (click)="selectPageNumber(pageIndex)"
+                            [ngClass]="(currentPage === pageIndex)?'pageNumberActive':'pageNumber'" mat-raised-button>
+                            {{page.pageNumber}}
+                        </button>
+                    </div>
+    
+                    <button (click)="changePage('next')" mat-icon-button>
+                        <mat-icon class="full-icon">chevron_right</mat-icon>
+                    </button>
+                </div>
+            </div>
+            <!-- 📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲 END PAGE BUTTONS AND DIRECTIONS -->
+    
+            <!-- END 🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀 BRAND MATRIX MODULAR LEGO TEMPLATE COMPONENTS   -->
+        </div>
+    
     </div>
-    <!-- END 🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿  SURVEY CREATION & DESIGN -->
-
+    
+   
 
 
 </div>
