badge button to indicate rate on mobile table done

--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.scss
@@ -38,6 +38,27 @@
 .rating-star {
   color: grey;
 }
+//desktop
+@media (min-width: 576px) {
+
+  .test-name-table {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .test-name-table:hover {
+    @include BoxShadow(6);
+  }
+  
+}
+//mobile
+@media (max-width: 576px) {
+
+  .test-name-table {
+    display: flex;
+    flex-direction: column;
+  }
+}
 
 .red {
   background-color: white;
@@ -106,14 +127,7 @@
   color: grey;
 }
 
-.test-name-table {
-  display: flex;
-  flex-direction: row;
-}
 
-.test-name-table:hover {
-  @include BoxShadow(6);
-}
 
 .image-row {
   display: flex;
