--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
@@ -40,9 +40,48 @@
   // animation: bounce 1000ms 1000ms ease-in-out  forwards  ;
 }
 
-@media (min-width: 576px) {}
+@media (min-width: 576px) {
+  .desktop {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .mobile {
+    display: none;
+    padding-bottom: 30px;
+  }
+
+  .test-name-table {
+    display: flex;
+    flex-direction: row;
+  }
+}
 
 @media (max-width: 576px) {
+  .desktop {
+    display: none;
+  }
+  .test-name-table {
+    display: flex;
+    flex-direction: column;
+    // gap: 16px;
+    // padding-top: 10px;
+    align-items: center;
+    border: 2px solid rgb(235, 235, 235);
+    border-radius: 5px;
+    width: 100vw;
+  }
+
+  .mobile {
+    padding-bottom: 30px;
+  }
+
+  .selectedCard{
+   display: none;
+  }
+  .noSelectedCard{
+    right: 7px;
+  }
 
 }
 
@@ -113,11 +152,6 @@
   color: grey;
 }
 
-.test-name-table {
-  display: flex;
-  flex-direction: row;
-}
-
 .test-name-table:hover {
   @include BoxShadow(6);
 }
@@ -149,7 +183,6 @@ textarea {
   overflow: auto;
 }
 
-
 textarea::-webkit-scrollbar {
   width: 3px;
 }
@@ -177,14 +210,14 @@ textarea::-webkit-scrollbar-thumb:hover {
 textarea {
   -webkit-tap-highlight-color: transparent;
   width: 100%;
-  // min-height: 1.5rem; 
-  padding: 0.2rem 0.0rem;
+  // min-height: 1.5rem;
+  padding: 0.2rem 0rem;
   // font-size: 1rem;
   // line-height: 2rem;
   // font-weight: 300;
   background: #ffffff;
   justify-content: center;
-  
+
   border-radius: 6px;
   outline: none;
   // box-shadow: inset 5px 7px 7px #d1d9e9, inset -19px -31px 1px #ffffff;
@@ -208,7 +241,6 @@ textarea:placeholder-shown {
   background: none;
 }
 
-
 /* Chrome/Opera/Safari */
 ::-webkit-input-placeholder {
   color: transparent;
@@ -225,7 +257,6 @@ textarea:placeholder-shown {
 :-moz-placeholder {
   color: transparent;
 }
-
 
 mat-form-field {
   margin-right: 12px;
