--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
@@ -70,6 +70,8 @@
     border: 2px solid rgb(235, 235, 235);
     border-radius: 5px;
     width: 100vw;
+    overflow: hidden;
+
   }
 
   .mobile {
