--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
@@ -29,6 +29,16 @@
             0 11px 15px -7px rgba(0, 0, 0, 0.2);
     }
 }
+
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Old versions of Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome, Edge, Opera and Firefox */
+  } 
 .emoji-handle {
     // position: absolute;
     top: 5px;
