--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -1,7 +1,7 @@
 <div class="page-design noselect">
     <div class="desktop">
         <button *ngIf="true" style="position: absolute;
-    bottom: 10px;
+    bottom: 10px;color: grey;
     z-index: 9999999999;
     right: 33px;
     outline: none;" (click)="displayQrCode()" mat-icon-button matTooltip="design tools" matTooltipPosition="above">
@@ -9,7 +9,7 @@
             </mat-icon>
         </button>
         <button *ngIf="true" style="position: absolute;
-    bottom: 9px;
+    bottom: 9px;color: grey;
     z-index: 9999999999;
     right: -3px;
     outline: none;" (click)="openFullscreen()" mat-icon-button matTooltip="design tools" matTooltipPosition="above">
