--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -387,7 +387,10 @@
             <div class="test-name-table" *ngIf="(y != 0)" [style.height]="(selectedCard == y)?'':'100px'">
 
                 <button *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 "
-                    [ngClass]="(selectedCard != y)?'noSelectedCard':'selectedCard'" style="background-color: #ee7f25;    color: white;
+                    
+                    style="background-color: #ee7f25;color: white;margin: 5px;width: 30px;
+                    height: 30px;
+                    line-height: 30px;right: 7px;
                     position: absolute;animation: rubberBand 700ms ease-in  forwards;"
                     mat-icon-button>{{bmxItem.componentText[y]['RATE']}}</button>
                 <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
