--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -351,8 +351,10 @@
 
             <div class="test-name-table" *ngIf="(y != 0)" [style.height]="(selectedCard == y)?'':'45px'">
 
-                <button *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 "
-                    [ngClass]="(selectedCard != y)?'noSelectedCard':'selectedCard'" style="background-color: #ee7f25;    color: white;
+                <button *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 "                    
+                    style="background-color: #ee7f25;color: white;margin: 5px;width: 30px;
+                    height: 30px;
+                    line-height: 30px;right: 7px;
                     position: absolute;animation: rubberBand 700ms ease-in  forwards;"
                     mat-icon-button>{{bmxItem.componentText[y]['RATE']}}</button>
                 <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
@@ -402,20 +404,21 @@
                                 [(ngModel)]="testName[columnName]" placeholder="comments" rows="4" cols="50"></textarea>
                         </div>
 
+                        <!-- TEST NAME -->
                         <p (click)="(selectedCard == y)?selectedCard = '':selectedCard = y" *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
                               columnName.includes('Comments') != true &&
                               columnName.includes('kata') != true &&
                               columnName.includes('ratio') != true"
                             [style.font-size]=" (columnName.includes('name') == true)?'27px':'20px'"
                             [style.color]="(columnName.includes('name') == true)?'#324395':'#bababa'"
-                            style="text-align: center;padding: 10px 4px;">{{testName[columnName]}}</p>
+                            style="text-align: center;padding: 10px 4px;">{{(testName[columnName].trim())}}</p>
 
                         <p *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
                               columnName.includes('Comments') != true && selectedCard == y &&
                               columnName.includes('name') != true"
                             [style.font-size]=" (columnName.includes('name') == true)?'27px':'20px'"
                             [style.color]="(columnName.includes('name') == true)?'#324395':'#bababa'"
-                            style="text-align: center;padding: 5px 4px;">{{testName[columnName]}}</p>
+                            style="text-align: center;padding: 5px 4px;">{{(testName[columnName].trim())}}</p>
 
 
                     </div>
